@@ -26,3 +26,10 @@ div.blinker {
 	background-position: right center;
 	background-repeat: no-repeat;
 }
+
+.affiliates-import input[type="file"].file-import-dropzone {
+	padding: 24px;
+	margin: 8px;
+	border: 2px solid #666;
+	border-radius: 4px;
+}
